<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F7F2E9"
    tools:context=".MainActivity">

    <TextView

        android:id="@+id/title"

        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        android:layout_centerHorizontal="true"

        android:fontFamily="cursive"

        android:gravity="top"

        android:text="@string/heading"
        android:textColor="#EC407A"
        android:textSize="30sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="350dp"
        android:contentDescription="@string/imge"
        app:layout_constraintBottom_toTopOf="@+id/textStatus"
        app:srcCompat="@drawable/image"
        tools:ignore="MissingConstraints" />


    <TextView
        android:id="@+id/match"
        android:layout_width="130dp"
        android:layout_height="32dp"
        android:layout_marginTop="20sp"
        android:fontFamily="@font/akaya_telivigala"
        android:text="@string/match"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/matchScore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/matchScore"
        android:layout_width="100dp"
        android:layout_height="32dp"
        android:fontFamily="@font/akaya_telivigala"
        android:text="@string/matchScore"
        android:textAlignment="center"
        android:textColor="#F6DF10"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/relative_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <RelativeLayout

        android:id="@+id/relative_layout"
        android:layout_width="385dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <TextView
            android:id="@+id/text_player1"
            android:layout_width="130dp"
            android:layout_height="33dp"
            android:fontFamily="@font/akaya_telivigala"
            android:text="@string/text_player1"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="normal" />


        <TextView
            android:id="@+id/score_Player1"
            android:layout_width="100dp"
            android:layout_height="32dp"
            android:layout_below="@+id/text_player1"
            android:layout_marginStart="15dp"
            android:layout_marginTop="1dp"
            android:fontFamily="@font/akaya_telivigala"
            android:text="@string/score_Player1"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="normal"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/draw"
            android:layout_width="130dp"
            android:layout_height="33dp"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/text_player1"
            android:fontFamily="@font/akaya_telivigala"
            android:text="@string/draw"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="normal"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/drawScore"
            android:layout_width="100dp"
            android:layout_height="32dp"
            android:layout_below="@+id/draw"
            android:layout_marginLeft="145sp"
            android:layout_marginTop="1sp"
            android:fontFamily="@font/akaya_telivigala"
            android:text="@string/drawScore"
            android:textAlignment="center"
            android:textColor="#CA1C1C"
            android:textSize="20sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/text_player2"
            android:layout_width="130dp"
            android:layout_height="33dp"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/draw"
            android:fontFamily="@font/akaya_telivigala"
            android:text="@string/text_player2"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/score_Player2"
            android:layout_width="100dp"
            android:layout_height="32dp"
            android:layout_below="@+id/draw"
            android:layout_marginLeft="285sp"
            android:layout_marginTop="1sp"
            android:fontFamily="@font/akaya_telivigala"
            android:text="@string/score_Player2"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="normal" />


    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layout_linear"
        android:layout_width="0dp"
        android:layout_height="350dp"
        android:layout_below="@id/imageView"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/textStatus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        tools:ignore="MissingConstraints">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/btn0"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/btn0"
                android:padding="20sp"
                android:tag="0"

                />

            <ImageView
                android:id="@+id/btn1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/btn1"
                android:padding="20sp"
                android:tag="1" />

            <ImageView
                android:id="@+id/btn2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/btn2"
                android:padding="20sp"
                android:tag="2" />


        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"

            android:layout_height="match_parent"

            android:layout_weight="1"
            android:orientation="horizontal"

            >

            <ImageView
                android:id="@+id/btn3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/btn3"
                android:padding="20sp"
                android:tag="3" />

            <ImageView
                android:id="@+id/btn4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/btn4"
                android:padding="20sp"
                android:tag="4" />

            <ImageView
                android:id="@+id/btn5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/btn5"
                android:padding="20sp"
                android:tag="5" />


        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"

            android:layout_height="match_parent"

            android:layout_weight="1"
            android:orientation="horizontal"

            >

            <ImageView
                android:id="@+id/btn6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/btn6"
                android:padding="20sp"
                android:tag="6" />

            <ImageView
                android:id="@+id/btn7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:layout_weight="1"
                android:contentDescription="@string/btn7"
                android:padding="20sp"
                android:tag="7" />

            <ImageView
                android:id="@+id/btn8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/btn8"
                android:padding="20sp"
                android:tag="8" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_linear"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/akaya_telivigala"
        android:text="@string/textStatus"
        android:textColor="#BC7B7D"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_play_again"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_play_again"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textStatus"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#DBB0B2"
        android:fontFamily="@font/akaya_telivigala"
        android:text="@string/btn_play_again"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.935"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_play_again"
        android:backgroundTint="#9A7E8B"
        android:fontFamily="@font/akaya_telivigala"
        android:text="@string/btn_reset"
        android:textSize="26sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_play_again"
        app:layout_constraintEnd_toStartOf="@+id/btn_play_again"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>