<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C8B7C9"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_your_side"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioTom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tom1"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/radioJerry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jerry1"
            android:textSize="24sp" />
    </RadioGroup>

</LinearLayout>
